RenderLayerCompositor: Strange comparison of opacity (float) to boolean. https://bugs.webkit.org/show_bug.cgi?id=140477.

Reviewed by Simon Fraser.

* rendering/RenderLayerCompositor.cpp:
(WebCore::styleChangeRequiresLayerRebuild): Add a cast to make the meaning of this
code clearer.


Canonical link: https://commits.webkit.org/158505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178568 268f45cc-cd09-0410-ab3c-d52691b4dbfc